# AC_bot

./: .gitignore  main.py  pyproject.toml
app/data/: files_actions.py  list_files.py
app/files/: animals.json  animals_cured.json
app/forms/: animal.py
app/keyboards/: animals.py  global_clinic.py
app/routers/: animals.py  reviews.py  start.py
