[tool.poetry]
name = "ac-bot"
version = "0.1.0"
description = "Veterenary clinic"
authors = ["Atvr0 <artvro12345@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
